--- a/хз2.html
+++ b/хз2.html
@@ -7,9 +7,12 @@
     <style>
         h1 {
             color: green;
+            text-align: center;
+            font-size: 50px;
         }
         p {
             color: rgb(225, 0, 225);
+            text-align: justify;
         }
         h2 {
             color:#ff9977;
