Add style types

--- a/хз2.html
+++ b/хз2.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Intro</title>
+    <!-- Підв'язування зовнішніх стилів -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <style>
-        h1 {
+        /* Внутрішні стилі */
+        /* h1 {
             color: green;
             text-align: center;
             font-size: 50px;
@@ -16,13 +19,14 @@
         }
         h2 {
             color:#ff9977;
-        }
+        } */
     </style>
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
 
-    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A consequuntur ducimus iusto odio eos id magnam repellendus at nulla.</h2>
+    <!-- Інлайн-стилі -->
+    <h2 style="font-size: 30px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A consequuntur ducimus iusto odio eos id magnam repellendus at nulla.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium similique eligendi. Nesciunt cum similique quaerat inventore et impedit voluptates saepe, a, nostrum commodi asperiores possimus sequi! Id asperiores ea error quisquam doloremque neque, commodi assumenda, quod, libero aspernatur voluptates laborum unde? Similique a quisquam sit itaque repudiandae rem necessitatibus, maiores pariatur nobis totam amet mollitia.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quaerat harum nulla qui! Tenetur magnam rerum animi eligendi, distinctio quo tempore ipsa expedita beatae officia adipisci iure cupiditate id. Facilis rem tenetur ducimus sequi, cum recusandae saepe eum ut blanditiis ratione veniam at voluptatibus corrupti quibusdam doloremque accusantium corporis consequatur optio qui autem quidem quo. Similique mollitia unde excepturi provident aliquam at ipsum alias nam consectetur.</p>
 
