--- a/хз2.html
+++ b/хз2.html
@@ -7,19 +7,12 @@
     <!-- Підв'язування зовнішніх стилів -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <style>
-        /* Внутрішні стилі */
-        /* h1 {
+        h1 {
             color: green;
             text-align: center;
             font-size: 50px;
         }
-        p {
-            color: rgb(225, 0, 225);
-            text-align: justify;
-        }
-        h2 {
-            color:#ff9977;
-        } */
+        
     </style>
 </head>
 <body>
@@ -27,11 +20,13 @@
 
     <!-- Інлайн-стилі -->
     <h2 style="font-size: 30px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A consequuntur ducimus iusto odio eos id magnam repellendus at nulla.</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium similique eligendi. Nesciunt cum similique quaerat inventore et impedit voluptates saepe, a, nostrum commodi asperiores possimus sequi! Id asperiores ea error quisquam doloremque neque, commodi assumenda, quod, libero aspernatur voluptates laborum unde? Similique a quisquam sit itaque repudiandae rem necessitatibus, maiores pariatur nobis totam amet mollitia.</p>
+    <p class="annotation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium similique eligendi. Nesciunt cum similique quaerat inventore et impedit voluptates saepe, a, nostrum commodi asperiores possimus sequi! Id asperiores ea error quisquam doloremque neque, commodi assumenda, quod, libero aspernatur voluptates laborum unde? Similique a quisquam sit itaque repudiandae rem necessitatibus, maiores pariatur nobis totam amet mollitia.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quaerat harum nulla qui! Tenetur magnam rerum animi eligendi, distinctio quo tempore ipsa expedita beatae officia adipisci iure cupiditate id. Facilis rem tenetur ducimus sequi, cum recusandae saepe eum ut blanditiis ratione veniam at voluptatibus corrupti quibusdam doloremque accusantium corporis consequatur optio qui autem quidem quo. Similique mollitia unde excepturi provident aliquam at ipsum alias nam consectetur.</p>
 
     <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A consequuntur ducimus iusto odio eos id magnam repellendus at nulla.</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium similique eligendi. Nesciunt cum similique quaerat inventore et impedit voluptates saepe, a, nostrum commodi asperiores possimus sequi! Id asperiores ea error quisquam doloremque neque, commodi assumenda, quod, libero aspernatur voluptates laborum unde? Similique a quisquam sit itaque repudiandae rem necessitatibus, maiores pariatur nobis totam amet mollitia.</p>
+    <p class="annotation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam accusantium similique eligendi. Nesciunt cum similique quaerat inventore et impedit voluptates saepe, a, nostrum commodi asperiores possimus sequi! Id asperiores ea error quisquam doloremque neque, commodi assumenda, quod, libero aspernatur voluptates laborum unde? Similique a quisquam sit itaque repudiandae rem necessitatibus, maiores pariatur nobis totam amet mollitia.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis quaerat harum nulla qui! Tenetur magnam rerum animi eligendi, distinctio quo tempore ipsa expedita beatae officia adipisci iure cupiditate id. Facilis rem tenetur ducimus sequi, cum recusandae saepe eum ut blanditiis ratione veniam at voluptatibus corrupti quibusdam doloremque accusantium corporis consequatur optio qui autem quidem quo. Similique mollitia unde excepturi provident aliquam at ipsum alias nam consectetur.</p>
+
+    <button id="subscribe-btn">Subscribe</button>
 </body>
 </html>
