--- a/хз2.html
+++ b/хз2.html
@@ -8,9 +8,71 @@
 </head>
 <body>
     <header>
-        <h1>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, laborum.
-        </h1>
+        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, laborum.</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt fugiat dolore ipsum rerum blanditiis quo similique laboriosam assumenda illo eius?</p>
+
+        <a href="#" class="btn">Read more</a>
     </header>
+
+    <main>
+        <section>
+            <div class="a1">
+                <h2 class="a2">Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+    
+                <p class="p1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus et tenetur nihil ipsum ipsa placeat dolorem quo nobis, repudiandae dicta.
+                </p>
+
+                <p class="p1">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident officiis temporibus natus fuga consequatur omnis velit saepe nihil obcaecati. Id magni rerum vero. Fugit eveniet eius vitae soluta! Enim, hic!
+                </p>
+            </div>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <div class="card">
+                        <img src="./assets/imgs/card1.jfif" alt="">
+                        <div class="card-content">
+                            <h3>Lorem, ipsum.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quam at commodi praesentium molestias consequatur pariatur illum beatae, blanditiis eius nemo optio? Quasi, expedita voluptatum?</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./assets/imgs/card2.jfif" alt="">
+                        <div class="card-content">
+                            <h3>Lorem, ipsum.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quam at commodi praesentium molestias consequatur pariatur illum beatae, blanditiis eius nemo optio? Quasi, expedita voluptatum?</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./assets/imgs/card3.jfif" alt="">
+                        <div class="card-content">
+                            <h3>Lorem, ipsum.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quam at commodi praesentium molestias consequatur pariatur illum beatae, blanditiis eius nemo optio? Quasi, expedita voluptatum?</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2 class="c">Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+            <p class="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ipsum voluptates alias placeat corporis id maiores ab eius ut explicabo, nemo nisi sint delectus ratione voluptate. Reprehenderit perferendis facilis dicta quaerat itaque minus? Ullam inventore earum deleniti consectetur ea unde explicabo sint, pariatur aliquam quas temporibus dolorum vel, ab nobis laborum nisi similique quia at non voluptate! Voluptas culpa deleniti quaerat at, eius et optio. Qui est repellendus repudiandae porro dolorem quas recusandae eum corrupti nisi ex, modi inventore voluptatum, velit asperiores aperiam quia. Provident a laborum ab odio ullam? Fuga ex quidem aliquid vel! Quo vero exercitationem cupiditate ipsa!</p>
+        </section>
+    
+    </main>
+    <footer>
+        <div class="footer">
+            <h2 class="d1">Lorem ipsum dolor sit amet.</h2>
+            <h2 class="d1">Lorem, ipsum dolor.</h2>
+            <p class="d2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur dolorem vero nisi nulla iure omnis quo dicta aspernatur quia? Nostrum.</p>
+            <p class="d2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, repellendus. Atque porro perferendis, corrupti necessitatibus numquam cumque iste cum. Ea qui quod suscipit incidunt aliquid repellat dolor quos veritatis maiores!</p>
+        </div>
+    </footer>
 </body>
 </html>
