Add em, rem, vw

--- a/хз3.html
+++ b/хз3.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./assets/css/style2.css" />
+  </head>
+  <body>
+    <h1>Lorem, ipsum.</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda,
+      consectetur. Esse tenetur eum quo doloremque commodi illum explicabo
+      pariatur, veniam, in blanditiis impedit ab rerum adipisci nam repudiandae,
+      ullam labore.
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora dolorum
+      libero esse expedita ipsam. Est sequi veniam, architecto vero praesentium
+      tempore recusandae nobis molestiae. Fugiat labore totam cumque? Tenetur,
+      soluta.
+    </p>
+    <div>
+      Lorem, ipsum dolor.
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea.
+      </p>
+    </div>
+    <div>
+      <h2 class="a">
+        Lorem, ipsum dolor.
+      </h2>
+      <p class="a">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, laudantium?
+      </p>
+    </div>
+  </body>
 </html>
