--- a/хз3.html
+++ b/хз3.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Lorem, ipsum.</h1>
@@ -28,11 +34,10 @@
       </p>
     </div>
     <div>
-      <h2 class="a">
-        Lorem, ipsum dolor.
-      </h2>
+      <h2 class="a">Lorem, ipsum dolor.</h2>
       <p class="a">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, laudantium?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
+        laudantium?
       </p>
     </div>
   </body>
