Add text/font spacing

--- a/хз3.html
+++ b/хз3.html
@@ -40,5 +40,14 @@
         laudantium?
       </p>
     </div>
+    <div class="b">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, quam,
+      in similique fugit maxime repellendus odio neque possimus culpa impedit
+      tenetur voluptatum esse, velit quis! Labore voluptatibus perspiciatis
+      dolores amet.
+    </div>
+    <h2 class="c" title="hlsjhgfdgbidg-gajgoig gnigijsf-guifdojd">
+      hlsjhgfdgbidg-gajgoig gnigijsf-guifdojd
+    </h2>
   </body>
 </html>
