--- a/хз3.html
+++ b/хз3.html
@@ -3,51 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style2.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <title>CSS Intro</title>
   </head>
   <body>
     <h1>Lorem, ipsum.</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda,
-      consectetur. Esse tenetur eum quo doloremque commodi illum explicabo
-      pariatur, veniam, in blanditiis impedit ab rerum adipisci nam repudiandae,
-      ullam labore.
-    </p>
-
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora dolorum
-      libero esse expedita ipsam. Est sequi veniam, architecto vero praesentium
-      tempore recusandae nobis molestiae. Fugiat labore totam cumque? Tenetur,
-      soluta.
-    </p>
-    <div>
-      Lorem, ipsum dolor.
+    <section>
+      <h2>Lorem, ipsum dolor.</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ea.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam sit
+        iusto hic atque tempora? Tenetur nisi ipsa quos qui provident!
       </p>
-    </div>
-    <div>
-      <h2 class="a">Lorem, ipsum dolor.</h2>
-      <p class="a">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-        laudantium?
+      <p>
+        Reiciendis id ratione aut porro voluptas modi nesciunt vero repudiandae
+        accusamus, nisi corporis dolore, harum, quisquam maxime odio illo qui.
       </p>
-    </div>
-    <div class="b">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, quam,
-      in similique fugit maxime repellendus odio neque possimus culpa impedit
-      tenetur voluptatum esse, velit quis! Labore voluptatibus perspiciatis
-      dolores amet.
-    </div>
-    <h2 class="c" title="hlsjhgfdgbidg-gajgoig gnigijsf-guifdojd">
-      hlsjhgfdgbidg-gajgoig gnigijsf-guifdojd
-    </h2>
+      <p>
+        Culpa aliquid harum amet officiis. Deserunt sunt dolor maiores dicta
+        praesentium quasi nobis repudiandae soluta obcaecati officiis, ut vel
+        fuga?
+      </p>
+    </section>
+
+    <section>
+      <h2>Nesciunt, expedita illum.</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ut
+        eligendi illo necessitatibus rem dolore aut architecto laborum. Beatae,
+        odio?
+      </p>
+      <p>
+        Quidem vel at natus ipsam, officiis repudiandae odit culpa eius
+        doloremque ipsum neque sed commodi illo quasi quod consequuntur
+        sapiente?
+      </p>
+      <p>
+        Ipsa voluptates ut, rem numquam quo totam facere praesentium non sequi
+        minus doloribus tempora quisquam odio aspernatur. Quas, corrupti ad?
+      </p>
+    </section>
+    <h2>Lorem, ipsum.</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non illo qui
+      quisquam aliquid adipisci eos quos magni cupiditate quae.
+    </p>
   </body>
 </html>
