--- a/хз3.html
+++ b/хз3.html
@@ -3,49 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>CSS Intro</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <h1>Lorem, ipsum.</h1>
-    <section>
-      <h2>Lorem, ipsum dolor.</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam sit
-        iusto hic atque tempora? Tenetur nisi ipsa quos qui provident!
-      </p>
-      <p>
-        Reiciendis id ratione aut porro voluptas modi nesciunt vero repudiandae
-        accusamus, nisi corporis dolore, harum, quisquam maxime odio illo qui.
-      </p>
-      <p>
-        Culpa aliquid harum amet officiis. Deserunt sunt dolor maiores dicta
-        praesentium quasi nobis repudiandae soluta obcaecati officiis, ut vel
-        fuga?
-      </p>
-    </section>
-
-    <section>
-      <h2>Nesciunt, expedita illum.</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ut
-        eligendi illo necessitatibus rem dolore aut architecto laborum. Beatae,
-        odio?
-      </p>
-      <p>
-        Quidem vel at natus ipsam, officiis repudiandae odit culpa eius
-        doloremque ipsum neque sed commodi illo quasi quod consequuntur
-        sapiente?
-      </p>
-      <p>
-        Ipsa voluptates ut, rem numquam quo totam facere praesentium non sequi
-        minus doloribus tempora quisquam odio aspernatur. Quas, corrupti ad?
-      </p>
-    </section>
-    <h2>Lorem, ipsum.</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non illo qui
-      quisquam aliquid adipisci eos quos magni cupiditate quae.
-    </p>
+    <article class="userCard">
+      <div class="bg">
+        <i class="fa-solid fa-pen"></i>
+      </div>
+      <div class="a">
+        <img src="./assets/imgs/user1.jpeg" alt="Jane S. Doe" />
+        <h2>Jane S. Doe</h2>
+        <div>Amsterdam, Netherlands</div>
+        <div>Copywriter</div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+          voluptatem debitis consectetur nesciunt inventore dolore nihil nulla
+          porro architecto labore.
+        </p>
+        <i class="social fa-brands fa-instagram"></i>
+        <i class="social fa-brands fa-twitter"></i>
+        <i class="social fa-brands fa-facebook-f"></i>
+      </div>
+    </article>
   </body>
 </html>
