Add flex for parent

--- a/хз3.html
+++ b/хз3.html
@@ -3,36 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>CSS Intro</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
+  <head>
   <body>
-    <article class="userCard">
-      <div class="bg">
-        <i class="fa-solid fa-pen"></i>
-      </div>
-      <div class="a">
-        <img src="./assets/imgs/user1.jpeg" alt="Jane S. Doe" />
-        <h2>Jane S. Doe</h2>
-        <div>Amsterdam, Netherlands</div>
-        <div>Copywriter</div>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-          voluptatem debitis consectetur nesciunt inventore dolore nihil nulla
-          porro architecto labore.
-        </p>
-        <i class="social fa-brands fa-instagram"></i>
-        <i class="social fa-brands fa-twitter"></i>
-        <i class="social fa-brands fa-facebook-f"></i>
-      </div>
-    </article>
+    <div class="outerBlock flexParent">
+      <div class="interBlock flexChild child1">1</div>
+      <div class="interBlock flexChild child2">2</div>
+      <div class="interBlock flexChild child3">3</div>
+      <div class="interBlock flexChild child4">4</div>
+      <div class="interBlock flexChild child1">5</div>
+      <div class="interBlock flexChild child2">6</div>
+      <div class="interBlock flexChild child3">7</div>
+      <div class="interBlock flexChild child4">8</div>
+      <div class="interBlock flexChild child1">9</div>
+      <div class="interBlock flexChild child2">10</div>
+      <div class="interBlock flexChild child3">11</div>
+      <div class="interBlock flexChild child4">12</div>
+    </div>
+    
   </body>
 </html>
