--- a/хз3.html
+++ b/хз3.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style2.css" />
-    <title>CSS Intro</title>
-  <head>
+    <title>Document</title>
+  </head>
   <body>
-    <div class="outerBlock flexParent">
-      <div class="interBlock flexChild child1">1</div>
-      <div class="interBlock flexChild child2">2</div>
-      <div class="interBlock flexChild child3">3</div>
-      <div class="interBlock flexChild child4">4</div>
-      <div class="interBlock flexChild child1">5</div>
-      <div class="interBlock flexChild child2">6</div>
-      <div class="interBlock flexChild child3">7</div>
-      <div class="interBlock flexChild child4">8</div>
-      <div class="interBlock flexChild child1">9</div>
-      <div class="interBlock flexChild child2">10</div>
-      <div class="interBlock flexChild child3">11</div>
-      <div class="interBlock flexChild child4">12</div>
-    </div>
-    
+    <header>
+      <h1>Lorem ipsum dolor sit.</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse, expedita
+        harum asperiores quaerat nemo quo nam eos est quidem iure.
+      </p>
+      <a href="#">Lorem, ipsum.</a>
+    </header>
   </body>
 </html>
