--- a/хз3.html
+++ b/хз3.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>Lorem ipsum dolor sit.</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse, expedita
-        harum asperiores quaerat nemo quo nam eos est quidem iure.
-      </p>
-      <a href="#">Lorem, ipsum.</a>
-    </header>
+    <header>header</header>
+    <div>
+      <nav>nav</nav>
+      <main>main</main>  
+    </div>
+   
+    <footer>footer</footer>
   </body>
 </html>
