--- a/хз3.html
+++ b/хз3.html
@@ -6,14 +6,56 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header>header</header>
-    <div>
-      <nav>nav</nav>
-      <main>main</main>  
-    </div>
-   
+    <header>
+      <div class="headerClass">
+        <i class="fa-solid fa-t iconT"></i>
+        <h1>Lorem ipsum dolor sit.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In labore
+          vero consequatur optio hic dolorem dolor repellat totam libero sit.
+        </p>
+      </div>
+    </header>
+    <main>
+      <div class="mainClass">
+        <div class="a">
+          <i class="fa-brands fa-youtube"></i>
+          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
+            cumque ea alias minus molestiae illum?
+          </p>
+        </div>
+
+        <div class="b">
+          <i class="fa-solid fa-chalkboard-user"></i>
+          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            dolor itaque, iure quidem officia impedit!
+          </p>
+        </div>
+
+        <div class="c">
+          <i class="fa-solid fa-briefcase"></i>
+          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+          <p>
+            Quas consequatur expedita possimus incidunt debitis quod, maxime
+            qui, natus nam a officia tenetur nisi.
+          </p>
+        </div>
+      </div>
+    </main>
+
     <footer>footer</footer>
   </body>
 </html>
