Add page with flex

--- a/хз3.html
+++ b/хз3.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>Document</title>
     <link
@@ -27,27 +26,27 @@
     </header>
     <main>
       <div class="mainClass">
-        <div class="a">
-          <i class="fa-brands fa-youtube"></i>
-          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+        <div class="youtube">
+          <i class="iconMain fa-brands fa-youtube"></i>
+          <h2 class="Social">Lorem</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
             cumque ea alias minus molestiae illum?
           </p>
         </div>
 
-        <div class="b">
-          <i class="fa-solid fa-chalkboard-user"></i>
-          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+        <div class="cuorses">
+          <i class="iconMain fa-solid fa-chalkboard-user"></i>
+          <h2 class="Social">Ipsum</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
             dolor itaque, iure quidem officia impedit!
           </p>
         </div>
 
-        <div class="c">
-          <i class="fa-solid fa-briefcase"></i>
-          <h2 class="Social">Lorem ipsum dolor sit.</h2>
+        <div class="freelancing">
+          <i class="iconMain fa-solid fa-briefcase"></i>
+          <h2 class="Social">Dolor</h2>
           <p>
             Quas consequatur expedita possimus incidunt debitis quod, maxime
             qui, natus nam a officia tenetur nisi.
@@ -56,6 +55,18 @@
       </div>
     </main>
 
-    <footer>footer</footer>
+    <footer class="footerClass">
+      <div class="aboutUs">
+        <i class="iconAboutUs fa-solid fa-laptop-code"></i>
+        <div class="footerText">
+          <h2>Lorem, ipsum.</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta,
+            molestias. Vero at officiis asperiores quaerat quo quidem ratione
+            accusamus, aut eius dolorum vitae ipsam soluta eveniet, numquam
+            sint! Saepe, delectus.
+          </p>
+        </div>
+    </footer>
   </body>
 </html>
