Add flex for child

--- a/хз3.html
+++ b/хз3.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style2.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -12,61 +12,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <header>
-      <div class="headerClass">
-        <i class="fa-solid fa-t iconT"></i>
-        <h1>Lorem ipsum dolor sit.</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. In labore
-          vero consequatur optio hic dolorem dolor repellat totam libero sit.
-        </p>
-      </div>
-    </header>
-    <main>
-      <div class="mainClass">
-        <div class="youtube">
-          <i class="iconMain fa-brands fa-youtube"></i>
-          <h2 class="Social">Lorem</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam
-            cumque ea alias minus molestiae illum?
-          </p>
-        </div>
-
-        <div class="cuorses">
-          <i class="iconMain fa-solid fa-chalkboard-user"></i>
-          <h2 class="Social">Ipsum</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            dolor itaque, iure quidem officia impedit!
-          </p>
-        </div>
-
-        <div class="freelancing">
-          <i class="iconMain fa-solid fa-briefcase"></i>
-          <h2 class="Social">Dolor</h2>
-          <p>
-            Quas consequatur expedita possimus incidunt debitis quod, maxime
-            qui, natus nam a officia tenetur nisi.
-          </p>
-        </div>
-      </div>
-    </main>
-
-    <footer class="footerClass">
-      <div class="aboutUs">
-        <i class="iconAboutUs fa-solid fa-laptop-code"></i>
-        <div class="footerText">
-          <h2>Lorem, ipsum.</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta,
-            molestias. Vero at officiis asperiores quaerat quo quidem ratione
-            accusamus, aut eius dolorum vitae ipsam soluta eveniet, numquam
-            sint! Saepe, delectus.
-          </p>
-        </div>
-    </footer>
+  <div class="parent">
+    <div class="child child1">1</div>
+    <div class="child child2">2</div>
+    <div class="child child3">3</div>
+    <div class="child child4">4</div>
+    <div class="child child5">5</div>
+    <div class="child child6">6</div>
+  </div>
   </body>
 </html>
