--- a/хз3.html
+++ b/хз3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -15,13 +15,10 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-  <div class="parent">
-    <div class="child child1">1</div>
-    <div class="child child2">2</div>
-    <div class="child child3">3</div>
-    <div class="child child4">4</div>
-    <div class="child child5">5</div>
-    <div class="child child6">6</div>
-  </div>
+    <div class="parent">
+      <div class="child child1">1</div>
+      <div class="child child2">2</div>
+      <div class="child child3">3</div>
+    </div>
   </body>
 </html>
