--- a/хз3.html
+++ b/хз3.html
@@ -15,10 +15,22 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <div class="parent">
-      <div class="child child1">1</div>
-      <div class="child child2">2</div>
-      <div class="child child3">3</div>
-    </div>
+    <ul class="usersList">
+      <li class="userListItem">
+        <div class="userImageWrapper">
+          <img
+            src="https://images.pexels.com/photos/774091/pexels-photo-774091.jpeg?auto=compress&cs=tinysrgb&w=600"
+            alt="user photo"
+          />
+        </div>
+        <div>
+          <h2 class="userName">Lorem, ipsum.</h2>
+          <div class="userDiscription>lorem.">Lorem.</div>
+        </div>
+        <button class="trashBtn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </li>
+    </ul>
   </body>
 </html>
