--- a/хз3.html
+++ b/хз3.html
@@ -15,22 +15,22 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <ul class="usersList">
-      <li class="userListItem">
-        <div class="userImageWrapper">
-          <img
-            src="https://images.pexels.com/photos/774091/pexels-photo-774091.jpeg?auto=compress&cs=tinysrgb&w=600"
-            alt="user photo"
-          />
-        </div>
-        <div>
-          <h2 class="userName">Lorem, ipsum.</h2>
-          <div class="userDiscription>lorem.">Lorem.</div>
-        </div>
-        <button class="trashBtn">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
-      </li>
-    </ul>
+    <article class="article">
+      <div class="articleDescription">
+        <h2>Lorem, ipsum.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint,
+          expedita corrupti dolor dolores ea, voluptatibus veritatis natus id
+          placeat architecto soluta facilis. Consequuntur sit dicta in nulla
+          dolore expedita a!
+        </p>
+      </div>
+      <div class="imageWrapper">
+        <img
+          src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="nature"
+        />
+      </div>
+    </article>
   </body>
 </html>
