Fix bug in homework

--- a/хз3.html
+++ b/хз3.html
@@ -33,7 +33,7 @@
         cumque eveniet distinctio quae ducimus illo nihil ipsam quia laudantium
         veniam.
       </p>
-      <footer>
+      <footer class="cardFooter">
         <div class="userBtn">
           <button class="viewCV">view cv</button>
           <button class="offer">make offer</button>
