Add pseudo-classes for links&elements

--- a/хз3.html
+++ b/хз3.html
@@ -15,61 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <article class="userCard">
-      <img
-        class="userImg"
-        src="https://images.pexels.com/photos/3175971/pexels-photo-3175971.jpeg?auto=compress&cs=tinysrgb&w=300"
-        alt="Name"
-      />
-      <i class="star1 fa-solid fa-star"></i>
-      <h2>Lorem, ipsum.</h2>
-      <div class="salary">$14/hour</div>
-      <h3 class="name">Jeffrey Abrams, 51</h3>
-      <div class="geoLoc">
-        <i class="fa-solid fa-location-dot"></i> Lorem ipsum dolor sit.
-      </div>
-      <p class="userDiscription">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        cumque eveniet distinctio quae ducimus illo nihil ipsam quia laudantium
-        veniam.
-      </p>
-      <footer class="cardFooter">
-        <div class="userBtn">
-          <button class="viewCV">view cv</button>
-          <button class="offer">make offer</button>
-        </div>
-        <div class="online">
-          <i class="dotOnline fa-solid fa-circle"></i>
-          Online
-        </div>
-      </footer>
-    </article>
-    <article class="userCard">
-      <img
-        class="userImg"
-        src="https://images.pexels.com/photos/8088687/pexels-photo-8088687.jpeg?auto=compress&cs=tinysrgb&w=600"
-        alt="Name"
-      />
-      <i class="star2 fa-solid fa-star"></i>
-      <h2>Lorem, ipsum.</h2>
-      <div class="salary">$9/hour</div>
-
-      <h3 class="name">Baltasar Kormakur, 52</h3>
-      <div class="geoLoc">
-        <i class="fa-solid fa-location-dot"></i> Lorem ipsum dolor sit.
-      </div>
-      <p class="userDiscription">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        cumque eveniet distinctio quae ducimus illo nihil ipsam quia laudantium
-        veniam.
-      </p>
-      <footer class="cardFooter">
-        <div class="userBtn">
-          <button class="viewCV">view cv</button>
-          <button class="offer">make offer</button>
-        </div>
-        <div class="online">Last seen: 17 minutes ago</div>
-      </footer>
-    </article>
+   <a href="http://google.com">Google</a>
+   <input type="text">
   </body>
 </html>
