Add pseudo-classes which tracts position

--- a/хз3.html
+++ b/хз3.html
@@ -15,7 +15,35 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-   <a href="http://google.com">Google</a>
-   <input type="text">
+    <section>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fugiat
+        eos magni animi assumenda dolores soluta quos nesciunt sed id.
+      </div>
+      <p>Aliquam non commodi dicta nesciunt!</p>
+      <div>
+        Quis illum iure corporis. Nulla id a consequatur consectetur repellendus
+        nobis veritatis ducimus numquam fugiat possimus cumque nisi, in iure.
+      </div>
+      <p>Dolor ipsum doloremque laboriosam possimus.</p>
+      <div>
+        Delectus doloremque ad maxime accusantium necessitatibus omnis corporis
+        ullam at sapiente temporibus molestiae eveniet iure, culpa amet
+        similique? Possimus, vero.
+      </div>
+      <p>Optio error porro suscipit facilis!</p>
+      <div>
+        Suscipit culpa dolorum enim sit eveniet sed facilis repellat, cupiditate
+        odit, amet officiis, tempora reiciendis voluptas dolores aspernatur illo
+        harum.
+      </div>
+    </section>
   </body>
+    <article>
+      <h2>Lorem ipsum.</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, sapiente!</p>
+      <p>Accusamus sunt incidunt labore in alias delectus inventore dicta nesciunt!</p>
+      <p>Animi, suscipit. Dolores blanditiis dolorem quos iure repudiandae, architecto unde.</p>
+    </article>
 </html>
