Start add table

--- a/хз3.html
+++ b/хз3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -15,35 +15,69 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <section>
-      <p>Lorem ipsum dolor sit amet.</p>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fugiat
-        eos magni animi assumenda dolores soluta quos nesciunt sed id.
-      </div>
-      <p>Aliquam non commodi dicta nesciunt!</p>
-      <div>
-        Quis illum iure corporis. Nulla id a consequatur consectetur repellendus
-        nobis veritatis ducimus numquam fugiat possimus cumque nisi, in iure.
-      </div>
-      <p>Dolor ipsum doloremque laboriosam possimus.</p>
-      <div>
-        Delectus doloremque ad maxime accusantium necessitatibus omnis corporis
-        ullam at sapiente temporibus molestiae eveniet iure, culpa amet
-        similique? Possimus, vero.
-      </div>
-      <p>Optio error porro suscipit facilis!</p>
-      <div>
-        Suscipit culpa dolorum enim sit eveniet sed facilis repellat, cupiditate
-        odit, amet officiis, tempora reiciendis voluptas dolores aspernatur illo
-        harum.
-      </div>
-    </section>
+    <table>
+      <thead>
+        <tr class="plans">
+          <th class="chosePlan" rowspan="2">Lorem, ipsum dolor.</th>
+          <th class="starter">Starter</th>
+          <th class="econom">Econom</th>
+          <th class="standart">Standart</th>
+        </tr>
+        <tr>
+          <th class="starterPlanCost">
+            $10 per month
+          </th>
+          <th class="economPlanCost">
+            $30 per month
+          </th>
+          <th class="standartPlanCost">$59 per month</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="line1">
+          <td>Lorem, ipsum dolor.</td>
+          <td>20GB</td>
+          <td>40GB</td>
+          <td>110GB</td>
+        </tr>
+        <tr class="line2">
+          <td>Lorem, ipsum dolor.</td>
+          <td>120GB</td>
+          <td>240GB</td>
+          <td>610GB</td>
+        </tr>
+        <tr class="line3">
+          <td>Lorem, ipsum.</td>
+          <td>1</td>
+          <td>15</td>
+          <td>60</td>
+        </tr>
+        <tr class="line4">
+          <td>Lorem, ipsum.</td>
+          <td>1</td>
+          <td>15</td>
+          <td>60</td>
+        </tr>
+        <tr class="line5">
+          <td>Lorem, ipsum.</td>
+          <td>No</td>
+          <td>Yes</td>
+          <td>Yes</td>
+        </tr>
+        <tr class="line6">
+          <td>Lorem, ipsum.</td>
+          <td>2</td>
+          <td>6</td>
+          <td>14</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr class="line7 btnStart">
+          <td></td>
+          <td><button>Start</button></td>
+          <td><button>Start</button></td>
+          <td><button>Start</button></td>
+        </tr>
+      </tfoot>
   </body>
-    <article>
-      <h2>Lorem ipsum.</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, sapiente!</p>
-      <p>Accusamus sunt incidunt labore in alias delectus inventore dicta nesciunt!</p>
-      <p>Animi, suscipit. Dolores blanditiis dolorem quos iure repudiandae, architecto unde.</p>
-    </article>
 </html>
