--- a/хз3.html
+++ b/хз3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -15,69 +15,16 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <table>
-      <thead>
-        <tr class="plans">
-          <th class="chosePlan" rowspan="2">Lorem, ipsum dolor.</th>
-          <th class="starter">Starter</th>
-          <th class="econom">Econom</th>
-          <th class="standart">Standart</th>
-        </tr>
-        <tr>
-          <th class="starterPlanCost">
-            $10 per month
-          </th>
-          <th class="economPlanCost">
-            $30 per month
-          </th>
-          <th class="standartPlanCost">$59 per month</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="line1">
-          <td>Lorem, ipsum dolor.</td>
-          <td>20GB</td>
-          <td>40GB</td>
-          <td>110GB</td>
-        </tr>
-        <tr class="line2">
-          <td>Lorem, ipsum dolor.</td>
-          <td>120GB</td>
-          <td>240GB</td>
-          <td>610GB</td>
-        </tr>
-        <tr class="line3">
-          <td>Lorem, ipsum.</td>
-          <td>1</td>
-          <td>15</td>
-          <td>60</td>
-        </tr>
-        <tr class="line4">
-          <td>Lorem, ipsum.</td>
-          <td>1</td>
-          <td>15</td>
-          <td>60</td>
-        </tr>
-        <tr class="line5">
-          <td>Lorem, ipsum.</td>
-          <td>No</td>
-          <td>Yes</td>
-          <td>Yes</td>
-        </tr>
-        <tr class="line6">
-          <td>Lorem, ipsum.</td>
-          <td>2</td>
-          <td>6</td>
-          <td>14</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr class="line7 btnStart">
-          <td></td>
-          <td><button>Start</button></td>
-          <td><button>Start</button></td>
-          <td><button>Start</button></td>
-        </tr>
-      </tfoot>
+    <div class="parent">
+      <div class="child">1</div>
+      <div class="child">2</div>
+      <div class="child">3</div>
+      <div class="child">4</div>
+    </div>
+    <header>
+      <div class="bg-cover"></div>
+      <h1>Lorem, ipsum dolor.</h1>
+    </header>
+    <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae molestias tempore vel similique amet et excepturi placeat est perspiciatis optio voluptas esse laborum quaerat explicabo quod, exercitationem inventore laudantium atque earum! Sapiente rem est iste, tenetur aperiam debitis earum eos voluptatum nisi, asperiores, facilis architecto. Officia dolores dolore repudiandae perspiciatis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae molestias tempore vel similique amet et excepturi placeat est perspiciatis optio voluptas esse laborum quaerat explicabo quod, exercitationem inventore laudantium atque earum! Sapiente rem est iste, tenetur aperiam debitis earum eos voluptatum nisi, asperiores, facilis architecto. Officia dolores dolore repudiandae perspiciatis.</p>
   </body>
 </html>
