--- a/хз3.html
+++ b/хз3.html
@@ -15,16 +15,7 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <div class="parent">
-      <div class="child">1</div>
-      <div class="child">2</div>
-      <div class="child">3</div>
-      <div class="child">4</div>
-    </div>
-    <header>
-      <div class="bg-cover"></div>
-      <h1>Lorem, ipsum dolor.</h1>
-    </header>
-    <p class="a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae molestias tempore vel similique amet et excepturi placeat est perspiciatis optio voluptas esse laborum quaerat explicabo quod, exercitationem inventore laudantium atque earum! Sapiente rem est iste, tenetur aperiam debitis earum eos voluptatum nisi, asperiores, facilis architecto. Officia dolores dolore repudiandae perspiciatis.Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae molestias tempore vel similique amet et excepturi placeat est perspiciatis optio voluptas esse laborum quaerat explicabo quod, exercitationem inventore laudantium atque earum! Sapiente rem est iste, tenetur aperiam debitis earum eos voluptatum nisi, asperiores, facilis architecto. Officia dolores dolore repudiandae perspiciatis.</p>
+    <h1>Lorem, ipsum.</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi ipsum nobis a, repellendus consequatur similique quia atque optio, dicta pariatur voluptatum laborum maiores explicabo dolore asperiores ad quod. Minima, exercitationem!</p>
   </body>
 </html>
