--- a/хз3.html
+++ b/хз3.html
@@ -15,7 +15,13 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <h1>Lorem, ipsum.</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi ipsum nobis a, repellendus consequatur similique quia atque optio, dicta pariatur voluptatum laborum maiores explicabo dolore asperiores ad quod. Minima, exercitationem!</p>
+    <article class="order">
+      <div class="flex-container">
+        <h2>Weekly orders</h2>
+        <i class="fa-regular fa-bookmark"></i>
+      </div>
+      <div class="order-counter">45,6334</div>
+      <p>Descreased by 10%</p>
+    </article>
   </body>
 </html>
