--- a/хз3.html
+++ b/хз3.html
@@ -15,13 +15,8 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <article class="order">
-      <div class="flex-container">
-        <h2>Weekly orders</h2>
-        <i class="fa-regular fa-bookmark"></i>
-      </div>
-      <div class="order-counter">45,6334</div>
-      <p>Descreased by 10%</p>
-    </article>
+    <h1>Lorem, ipsum.</h1>
+    <div class="bg"></div>
+    <button class="btn">Click me</button>
   </body>
 </html>
