--- a/хз3.html
+++ b/хз3.html
@@ -15,8 +15,19 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <h1>Lorem, ipsum.</h1>
-    <div class="bg"></div>
-    <button class="btn">Click me</button>
+    <section>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, dolorum
+        doloremque, illo sunt quas nulla perspiciatis, itaque debitis modi
+        doloribus dolorem harum rerum accusantium nam facilis explicabo quam
+        vero suscipit.
+      </p>
+      <p>
+        Libero, explicabo facere soluta quam beatae ducimus aliquid voluptatum
+        mollitia molestiae quisquam numquam accusamus inventore laborum incidunt
+        accusantium possimus ab dolore sed dolorem ex fugiat. Quis ipsum
+        assumenda dignissimos fuga!
+      </p>
+    </section>
   </body>
 </html>
