--- a/хз3.html
+++ b/хз3.html
@@ -15,19 +15,25 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <section>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, dolorum
-        doloremque, illo sunt quas nulla perspiciatis, itaque debitis modi
-        doloribus dolorem harum rerum accusantium nam facilis explicabo quam
-        vero suscipit.
-      </p>
-      <p>
-        Libero, explicabo facere soluta quam beatae ducimus aliquid voluptatum
-        mollitia molestiae quisquam numquam accusamus inventore laborum incidunt
-        accusantium possimus ab dolore sed dolorem ex fugiat. Quis ipsum
-        assumenda dignissimos fuga!
-      </p>
-    </section>
+    <div class="outer-container grid-parent">
+      <div class="inner-block grid-child">1</div>
+      <div class="inner-block grid-child">2</div>
+      <div class="inner-block grid-child">3</div>
+      <div class="inner-block grid-child">4</div>
+      <div class="inner-block grid-child">5</div>
+      <div class="inner-block grid-child">6</div>
+      <div class="inner-block grid-child">1</div>
+      <div class="inner-block grid-child">2</div>
+      <div class="inner-block grid-child">3</div>
+      <div class="inner-block grid-child">4</div>
+      <div class="inner-block grid-child">5</div>
+      <div class="inner-block grid-child">6</div>
+      <div class="inner-block grid-child">1</div>
+      <div class="inner-block grid-child">2</div>
+      <div class="inner-block grid-child">3</div>
+      <div class="inner-block grid-child">4</div>
+
+    </div>
+
   </body>
 </html>
