--- a/хз3.html
+++ b/хз3.html
@@ -15,13 +15,17 @@
     <link rel="stylesheet" href="./assets/css/style2.css" />
   </head>
   <body>
-    <div class="outer-container grid-parent">
+    <!-- <div class="outer-container grid-parent">
       <div class="inner-block grid-child">1</div>
       <div class="inner-block grid-child">2</div>
       <div class="inner-block grid-child">3</div>
       <div class="inner-block grid-child">4</div>
       <div class="inner-block grid-child">5</div>
       <div class="inner-block grid-child">6</div>
-    </div>
+    </div> -->
+    <header>header</header>
+    <nav>nav</nav>
+    <main>main</main>
+    <footer>footer</footer>
   </body>
 </html>
